--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -261,6 +261,14 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 
 
+#hero {
+  width: 100%;
+  height: 100vh;
+    background: url("static/img/n.jpg") top right no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
 @media (min-width: 992px) {
   #hero {
     padding-left: 160px;
