--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -264,7 +264,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-    background: url("static/img/n.jpg") top right no-repeat;
+    background: url("static/assets/img/n.png") top right no-repeat;
   background-size: cover;
   position: relative;
 }
