--- a/templates/index.html
+++ b/templates/index.html
@@ -663,8 +663,10 @@
 <!--    </center>-->
 
 
+
+
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+       <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -716,9 +718,9 @@
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
               <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+<!--                <div class="loading">Loading</div>-->
+<!--                <div class="error-message"></div>-->
+
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
@@ -729,6 +731,13 @@
 
       </div>
     </section><!-- End Contact Section -->
+
+    {%if name%}
+    <div class="alert alert-primary alert-dismissible fade show" role="alert">
+    <strong>Thank you {{name}}!</strong> Your message have been recieved
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {%endif%}
 
   </main><!-- End #main -->
 
