--- a/templates/index.html
+++ b/templates/index.html
@@ -701,7 +701,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="/contact" method="post" role="form" class="php-email-form1">
+            <form action=" " method="post" role="form" class="php-email-form1">
               {% csrf_token %}
               <div class="row">
                 <div class="col-md-6 form-group">
